# PodcastsTUI

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: load.md
src/: feed.rs  main.rs  message.rs  trace.rs
src/data/: mod.rs
src/feed/: mod.rs
src/message/: mod.rs
src/trace/: mod.rs
src/ui/: input.rs  mod.rs
